Save color labels and pin to timeline for masks as well.

We shouldn't forget to check if other layers-only features can
be applied to masks too, but these were the only ones I could find.

BUG:438124